Version 59 	 2010-08-22 	 Added Password Reset. Not tested 
Version 58 	 2010-08-22 	 Testing related changes 
Version 57 	 2010-08-17 	 Google Apps related changes. Tested 
Version 56 	 2010-08-16 	 Small cosmetic changes 
Version 55 	 2010-08-16 	 Customizing Admin Dashboard 
Version 54 	 2010-08-16 	 To Activate/Deactivate accounts in Google 
Version 53 	 2010-08-16 	 Confirmation while deleting Google account 
Version 52 	 2010-08-16 	 Small changes to admin 
Version 51 	 2010-08-16 	 Changing vidyalaya_email_id to college_email_id 
Version 50 	 2010-08-16 	 sending email on activation 
Version 49 	 2010-08-16 	 Google Apps realted changes. Not tested 
Version 48 	 2010-08-14 	 Adding related_name to profile user 
Version 47 	 2010-08-14 	 Mistake in settings 
Version 46 	 2010-08-14 	 Updates to requirements 
Version 45 	 2010-08-14 	 Adding support to create User accounts in local database and Google Apps 
Version 44 	 2010-08-14 	 Adding GoogleAppsManager. Tested 100% 
Version 43 	 2010-08-13 	 Changes to Homepage 
Version 42 	 2010-08-13 	 Added OpenID support 
Version 41 	 2010-08-13 	 Changing django-avatar version in requirements 
Version 40 	 2010-08-12 	 Upgraded django-avatar app to 1.1a5 
Version 39 	 2010-08-12 	 Making Course and Year of Joining in profile as optional 
Version 38 	 2010-08-12 	 Minor cosmetic changes in submenu 
Version 37 	 2010-08-12 	 Added 'Browse by Batch' 
Version 36 	 2010-08-12 	 another small change to fabfile 
Version 35 	 2010-08-12 	 Small change to fabfile 
Version 34 	 2010-08-12 	 Remove test_utils apps 
Version 33 	 2010-08-12 	 Deployment related changes 
Version 32 	 2010-08-12 	 Major revision. Browse by Batch. Lot of cleanup. 
Version 31 	 2010-08-11 	 Minor Look & Feel improvments 
Version 30 	 2010-08-11 	 Added lot of functional test cases 
Version 29 	 2010-08-11 	 Disabling L10N so that DATE_INPUT_FORMATS can be used in ModelForm Date Fields 
Version 28 	 2010-08-10 	 Added Sanity test cases 