@@ -64,6 +64,8 @@ def run():
     accounts_profile_1.course = accounts_course_1
     accounts_profile_1.year_of_joining = Decimal('2009')
     accounts_profile_1.college_email_id = u'test@rmv.ac.in'
+    accounts_profile_1.personal_email_id = u'test@gmail.com'
+    accounts_profile_1.google_account_created = True
     accounts_profile_1.gender = u'M'
     accounts_profile_1.actual_date_of_birth = datetime.date(2009, 6, 1)
     try:
