@@ -1,3 +1,4 @@
+Version 60 	 2010-08-22 	 Greetings on Birthdays. Not tested 
 Version 59 	 2010-08-22 	 Added Password Reset. Not tested 
 Version 58 	 2010-08-22 	 Testing related changes 
 Version 57 	 2010-08-17 	 Google Apps related changes. Tested 
